--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
 body {
     min-height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+   
+}
+.container {
+    text-align: center;
+}
+.hexColor {
+    text-transform: capitalize;
+}
+.hex {
+    font-size: 3rem;
 }
 .colorBtn {
     padding: 0.25rem 0.5rem;
-    border: 3px solid #fefefe;
+    border: 3px solid #f15025;
     border-radius: 7px;
-    color: #fefefe;
+    color: #f15025;
     background: rgba(0, 0, 0, 0.6);
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     text-transform: capitalize;
     cursor: pointer;
     outline: none;
